[tool.poetry]
name = "notion-agent"
version = "0.1.0"
description = ""
authors = ["Ilia Awakimjan <ilia.awakimjan@wetransfer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.58"
langchain-community = "^0.2.10"
llama-index-llms-openai-like = "^0.1.3"
llama-index-embeddings-openai = "^0.1.11"
llama-index-readers-notion = "^0.1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
